update-manager (0.52) feisty; urgency=low

  * UpdateManager/UpdateManager.py:
    - more robust error reporting from libapt (lp: #74797)

 --

update-manager (0.51) feisty; urgency=low

  * data/channels/Ubuntu.info.in:
    - updated for feisty

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu,  7 Dec 2006 17:46:10 +0100

update-manager (0.50) feisty; urgency=low

  * support --disable-component (AlwaysEnableUniverseMultiverse spec)
  * look for lsb_release in PATH instead of hardcoding it (lp: #73075)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 24 Nov 2006 08:52:33 +0100

update-manager (0.45.1) edgy-updates; urgency=low

  * handle unexpected data from data more gracefuly (lp: #68553)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 27 Oct 2006 10:23:39 +0200

update-manager (0.45) edgy; urgency=low

  * debian/control:
    - added dependency on python-gconf
    - removed recommends on python-gnome2

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 11 Oct 2006 18:32:17 +0200

update-manager (0.44.17) edgy; urgency=low

  * memory leak fixed (lp: #43096)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon,  9 Oct 2006 15:24:40 +0200

update-manager (0.44.16) edgy; urgency=low

  * fix proxy usage when runing in non-root mode (lp: #40626)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri,  6 Oct 2006 15:17:37 +0200

update-manager (0.44.15) edgy; urgency=low

  * added missing python-vte dependency (lp: #63609)
  * added missing gksu dependency (lp: #63572)
  * don't remove xchat automatically anymore on upgrade (leftover
    from breezy->dapper) (lp: #63881)
  * do not come up with bogus dist-upgrade suggestions
  * fix bad english grammar (lp: #63761, #63474)
  * fix in the edgyUpdates quirks handler (lp: #63723)
  * catch error from _tryMarkObsoleteForRemoval() (lp: #63617)
  * fix plural forms for ro, pl (lp: #46421)
  * properly escape comments before displaying them (lp: #63475)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed,  4 Oct 2006 21:10:40 +0200
