@@ -2,6 +2,8 @@ update-manager (0.52) feisty; urgency=low
 
   * UpdateManager/UpdateManager.py:
     - more robust error reporting from libapt (lp: #74797)
+  * SoftwareProperties/SoftwareProperties.py:
+    - do not crash if template is missing (lp: #70580)
 
  --
 
